--- a/src/css/style.css
+++ b/src/css/style.css
@@ -116,7 +116,7 @@ body {
   font-size: 16px;
   font-weight: 400;
   color: #fff;
-  background-image: url(../img/body-backgroud.jpg);
+  background-color: #2b4d69;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -127,19 +127,13 @@ body {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.75);
   z-index: 1;
 }
 
 .container {
-  max-width: 1342px;
+  max-width: 970px;
   padding: 0 15px;
   margin: 0 auto;
-}
-@media (max-width: 1354px) {
-  .container {
-    max-width: 970px;
-  }
 }
 @media (max-width: 991.98px) {
   .container {
@@ -235,7 +229,8 @@ svg rect {
   width: 100%;
   margin: 100px auto;
   padding: 25px;
-  background-color: rgba(0, 0, 0, 0.25);
+  background-color: rgba(0, 0, 0, 0.75);
+  background: url('../img/bcg.jpg') 0 0 no-repeat;
   border-radius: 15px;
   position: relative;
   z-index: 10;
